# dati_geospaziali

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  START_API.md  START_HERE.md  pyproject.toml  requirements.txt
backend/fastapi_app/: dependencies.py  main.py
backend/fastapi_app/core/: config.py  database.py  indexes.py
backend/fastapi_app/mappers/: __init__.py  fontanella_mapper.py
backend/fastapi_app/models/: __init__.py  fontanella.py
backend/fastapi_app/queries/: __init__.py  builder.py
backend/fastapi_app/repositories/: __init__.py  fontanella.py
backend/fastapi_app/schemas/: fontanella.py
backend/fastapi_app/scripts/: __init__.py  init_db.py  setup_db.py  test_connection.py
backend/fastapi_app/services/: fontanella_service.py  fontanelle_service.py
backend/flask_app/: app.py
backend/flask_app/blueprints/: web.py
backend/flask_app/templates/: base.html  (+1 more)
config/: settings.toml
database/: README.md
docs/: API_ENDPOINTS.md  API_IMPLEMENTATION.md  API_QUICK_START.md  API_SUMMARY.txt  CONCEPTUAL_MODEL.md  DATABASE.md  DATA_LAYER.md  MONGODB_ARCHITECTURE.md  README_API.md  SETUP_MONGODB_COMPLETE.md  architecture.md  project-structure.md
environments/: .env.example
frontend/: ARCHITECTURE_SUMMARY.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  README.md  SERVER_CONFIGURATION.md  SETUP_AND_TESTING.md  START_HERE.md
frontend/public/: index.html
infra/: docker-compose.yml
scripts/: bootstrap.sh
shared/components/: README.md
shared/utils/: README.md
tests/unit/: test_placeholder.py
(+21 files in other folders)
