[project]
name = "fontanelle-milano"
version = "0.1.0"
description = "Project skeleton for Fontanelle Milano web app"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "flask",
  "pymongo>=4.6.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
